# templates

./: README.md
Latex/Homeworks/: report.tex
OpenGL/CMake/: .gitignore  CMakeLists.txt  README.md
OpenGL/CMake/cmake/config/: dir_helper.h.in
OpenGL/CMake/cmake/modules/: README.md
OpenGL/CMake/include/glad/: glad.h
